--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,13 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    
-    "dev": "nodemon server.js"  
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.958.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.38.0",
     "cookie-parser": "^1.4.6",
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "mime-types": "^3.0.2",
     "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
