--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "shadcn": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2"
   },
