--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-player": "^3.4.0",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^4.5.2",
     "recharts": "^2.15.4",
