--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "razorpay": "^2.9.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "twilio": "^5.10.7"
+    "twilio": "^5.10.7",
+    "uuid": "^13.0.0"
   }
 }
